Create basic layout for a calculator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator">
+            <div class="value"></div>
+            <div>
+                <button class="function">AC</button>
+                <button class="function">+/-</button>
+                <button class="function">%</button>
+                <button class="operator">/</button>
+            </div>
+            <div>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">*</button>
+            </div>
+            <div>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">-</button>
+            </div>
+            <div>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">+</button>
+            </div>
+            <div class="wide-row">
+                <button  class="number wide">0</button>
+                <button class="number">.</button>
+                <button class="operator">=</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
