Add function to perform basic operations
take the input array and divide it between numbers and operators
Validation has not been handled yet, will be done in future commits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <div class="value"></div>
+            <div class="display">
+                <div class="expression"></div>
+                <div class="current-value"></div>
+            </div>
             <div>
                 <button class="function">AC</button>
                 <button class="function">+/-</button>
